# tcplugins-zurihac2020

./: .gitignore  Biblio.md  README.md  ToDo.md  outline.md
GHC-track-presentation/: errata.md  slides.html
example-plugins/: cabal.project
example-plugins/inj-tyfam-plugin/: LICENSE  README.md  inj-tyfam-plugin.cabal
example-plugins/inj-tyfam-plugin/app/: Main.hs  Prelim.hs
example-plugins/inj-tyfam-plugin/src/Plugin/: InjTyFam.hs
