cabal-version: 2.4

name: inj-tyfam-plugin
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file: LICENSE
author: Nicolas Frisby
maintainer: nicolas.frisby@gmail.com
-- copyright:
-- category:

common common
  default-language: Haskell2010
  build-depends:
    base
      >= 4.12.0 && < 4.16.0

library
  import: common
  hs-source-dirs:
    src

  exposed-modules:
    Plugin.InjTyFam

  build-depends:
    ghc
      >= 8.11.0 && < 8.13.0

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists

executable smoke
  import: common
  main-is: Main.hs
  hs-source-dirs:
    app

  build-depends:
    inj-tyfam-plugin

  other-modules:
    Prelim
